MINOR
  * soundgen(), getSpectralEnvelope(): a more consisent implementation of zero-pole models, which affects manually specified formant amplitudes. Check your old code!
  * soundgen(), getSpectralEnvelope(): formantDepStoch is now treated as a multiplication factor instead of dB (0 = no formant, 1 = default amplitude). Check your old code!
  * soundgen(): updated list of tempEffects
  * fade(), crossFade(): new defaults of steepness values, added gaussian shape
  * estimateVTL(), schwa(), formant_app(): a new argument "interceptZero" for controlling whether the regression line is forced to pass through the origin
  * analyze(): cutFreq can be a vector of length 2 - eg cutFreq = c(100, 8000) - to produce spectral descriptives from a particular range of frequencies
  * analyze(): a new argument "voicedSeparate" - if TRUE (default), most descriptors are returned separately for the entire sound and only for voiced frames. This removes ambiguities in earlier versions, where some variables were silently set to NA for unvoiced frames.

BUGS FIXED:
  * soundgen(): correct timing of glottis anchors
  * soundgen(): invalidArgAction = 'ignore' overrides inbuilt limits of AM parameters
  * soundgen_app(): correct parsing of long formant lists
  * pitch_app(): spectrogram plot responds to change in input settings
  * formant_app(): doesn't crash when changing VTL settings


          CHANGES IN SOUNDGEN VERSION 1.8.0 [11-August-2020]
NEW FUNCTIONS:
  * formant_app(): a Shiny web app for manually correcting formant measurements

MAJOR:
  * pitch_app(): a new layout and numerous changes, e.g. caching to speed up the plotting of long files
  * modulationSpectrum(), modulationSpectrumFolder(): the default is now to measure roughness for multiple frames rather than for the entire sound, thus returning a vector of roughness values over time (controlled by a new argument "amRes")